Fix bug with ubvisibl avatar.png

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
   height: 389px;
   background-color: #fff;
   border-radius: 50%;
-  background-image: url("/img/avatar.jpg");
+  background-image: url("../img/avatar.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center left;
